[build-system]
requires = ["flit_core >=3.0.0,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module="pydirutils"
author="Doug Ransom"
author-email="doug@ransom.vip"
home-page="https://github.com/dougransom/pydirutils"
description-file="README.md"

requires=[
]
requires-python=">=3.0"
classifiers=[
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
	"Development Status :: 4 - Beta"
]
keywords="python,directories,sys,site,shell"


[tool.flit.scripts]
croesus_to_nbin_tradelist = "nbin_golf.croesus_to_nbin_tradelist:main"

[tool.flit.entrypoints."pygments.lexers"]
dogelang = "dogelang.lexer:DogeLexer"