[build-system]
requires = ["flit_core >=3.0.0,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module="pyenvutils"
author="Doug Ransom"
author-email="doug@ransom.vip"
home-page="https://github.com/dougransom/pydirutils"
description-file="README.md"

requires=[
]
requires-python=">=3.3"
classifiers=[
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
	"Development Status :: 4 - Beta"
]
keywords="python,directories,sys,site,shell,environment"


[tool.flit.scripts]
pyd_prefix = ":prefix"
pyd_base_prefix = "sys:base_prefix"
pyd_exec_prefix="sys:exec_prefix"
pyd_executable = "sys:executable"
pyd_float_info="sys:float_info"
pyd_hash_info="sys:hash_info"
pyd_hex_version="sys:hexversion"
pyd_implementation="sys:implementation"
pyd_int_info="sys:int_info"
pyd_path="sys:path"
pyd_platform="sys:platform"
pyd_platlibdir="sys:sys.platlibdir"
pyd_version_inf="sys:version_info"
pyd_winver="sys:winver"